Constructor calls set this too early https://bugs.webkit.org/show_bug.cgi?id=172302

Reviewed by Saam Barati.

JSTests:

This tests all three kinds of constructs in BytecodeGenerator. All three were previously
wrong.

* stress/construct-overwritten-variable.js: Added.
(new.x.x):
* stress/construct-spread-overwritten-variable-2.js: Added.
(new.x.x):
* stress/construct-spread-overwritten-variable.js: Added.
(new.x.x):

Source/JavaScriptCore:

We were setting this before evaluating the arguments, so this code:

    var x = 42;
    new x(x = function() { });

Would crash because we would pass 42 as this, and create_this would treat it as a cell.
Dereferencing a non-cell is guaranteed to crash.

* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::emitConstruct):
* bytecompiler/BytecodeGenerator.h:
* bytecompiler/NodesCodegen.cpp:
(JSC::NewExprNode::emitBytecode):
(JSC::FunctionCallValueNode::emitBytecode):



Canonical link: https://commits.webkit.org/189205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217062 268f45cc-cd09-0410-ab3c-d52691b4dbfc