JSTests/stress/construct-spread-overwritten-variable.js
@@ -1,0 +1,7 @@
+//@ runDefault
+
+(function(){
+    var x = 42;
+    var a = [1, 2, 3];
+    new x(x = function(){ }, ...a);
+})();
